# CPP_Learning_Project

./: .clang-format  CMakeCache.txt  CMakeLists.txt  LICENSE.md  Makefile  README.md  cmake_install.cmake  tower
Assignments/: TASK_0.md  TASK_1.md
src/: aircraft.cpp  aircraft.hpp  aircraft_manager.cpp  aircraft_manager.hpp  aircraft_types.hpp  airport.hpp  airport_type.hpp  config.hpp  geometry.hpp  main.cpp  runway.hpp  terminal.hpp  tower.cpp  tower.hpp  tower_sim.cpp  tower_sim.hpp  waypoint.hpp
src/GL/: displayable.hpp  dynamic_object.hpp  opengl_interface.cpp  opengl_interface.hpp  texture.hpp
src/img/: image.cpp  image.hpp  media_path.hpp  stb_image.h
